--- a/Basic_HTML_and_CSS/Basic_CSS_2.css
+++ b/Basic_HTML_and_CSS/Basic_CSS_2.css
@@ -2,6 +2,7 @@
     color: purple;
     font-size: 50px;
     text-align: center;
+    text-shadow: 2px 2px #6495ED;
 }
 
 .lead {
@@ -12,4 +13,26 @@
     margin-left: 25px;
     margin-right: 25px;
     padding: 10px;
+}
+
+.container {
+    margin: 25px 25px;
+    
+}
+
+ol {
+    list-style-type: upper-roman;
+
+}
+
+ul {
+    list-style-type: square;
+}
+
+.copy_right {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
