--- a/challenge/css/styles.css
+++ b/challenge/css/styles.css
@@ -3,6 +3,10 @@ body {
     background-color: #fff;
 }
 
+.container {
+    margin: 15px;
+}
+
 /*** Navbar ***/
 
 .navbar {
@@ -77,14 +81,14 @@ body {
 }
 
 .img-text {
-  position: absolute;
-  top: 20%;
-  right: 40%;
-  color: #fff;
-  font-size: 30px;
-  font-weight: 900;
-  z-index: bold;
-   
+   position: absolute;
+   bottom: 20%;
+   right: 40%;
+   color: #fff;
+   font-size: 30px;
+   font-weight: 900;
+   z-index: bold;
+   text-shadow: .5px .5px black;
    
 }
 
@@ -108,24 +112,110 @@ body {
 /*** End Image ***/
 
 /*** TWO COLUMN ***/
+.two-col-container {
+    margin-top: 100px;
+    margin-bottom: 75px;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+
+}
 
 .column {
-    float: left;
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    align-items: center;
+}
+
+.morty-col {
+    height: 100%;
+    margin: 10px 25px;    
+}
+
+.morty-image {
+    width: 415px;
+    height: 375px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12); 
+    border-radius: 10px;
+    margin: auto auto;
+    opacity: 1;
+    display: block;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.morty-container {
+    position: relative;
+}
+  
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    color: green;
+  }
+
+  .morty-container:hover .morty-image {
+    opacity: 0.3;
   }
   
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
+  .morty-container:hover .middle {
+    opacity: 1;
   }
+  
+  .text {
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
+
+  .text a {
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+.info-col {
+    height: 100%;
+   
+}
+
+.text-box {
+    width: 100%;
+    max-width: 450px;
+    margin-right: 10px;
+    margin-left: 10px;
+    line-height: 1.5;
+}
+
+.text-box h2 {
+    text-align: center;
+    color: rgb(148,0,211);
+    font-weight: 800;
+    letter-spacing: .12rem;
+    font-size: 30px;
+}
+
+.text-box p:hover {
+    color: purple;
+}
 
 /*** END TOW COLUMN ***/
 
 /*** Table ***/
 table {
-    width: 75%;
+    width: 85%;
     border: 2px solid #35c9dd;
     margin-top: 100px;
     margin-bottom: 150px;
@@ -155,7 +245,39 @@ table {
 }
 
 /*** End Table ***/
+/*** VIDEO ****/
+.vid-box {
+    position: relative;
+    height: 600px;
+    width: 800px;
+    margin: auto auto;
+}
 
+ video {
+     width: 100%;
+     height: 100%;
+     margin-right: 5px;
+     margin-left: 5px;
+ }
+
+.overlay-rick {
+    background: rgba(0,0,0,0);
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    display: flex;
+    align-items: left;
+    justify-content: center;
+}
+
+h1 {
+    color: white;
+    font-family: 'Nobile', sans-serif;
+    font-size: 9vw;
+    text-align: center;
+}
+  
+
+/**** END VIDEO ****/
 
 /*** Footer ***/
 .footer {
